--- a/Linkup/res/layout/fail_dialog.xml
+++ b/Linkup/res/layout/fail_dialog.xml
@@ -59,27 +59,25 @@
         android:layout_margin="10dip"
         android:gravity="center" >
 
-        <Button
+        <TextView
             android:id="@+id/fail_button_cancel"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="20dp"
-            android:background="@drawable/back"
+            android:drawableTop="@drawable/back"
             android:gravity="center"
-            android:textSize="20sp" />
+            android:text="@string/back" />
 
-        <Button
+        <TextView
             android:id="@+id/fail_button_ok"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="20dp"
-            android:background="@drawable/again"
+            android:drawableTop="@drawable/again"
             android:gravity="center"
-            android:textSize="20sp" />
+            android:text="@string/again" />
     </LinearLayout>
 
 </LinearLayout>
