--- a/Linkup/res/layout/time_dialog.xml
+++ b/Linkup/res/layout/time_dialog.xml
@@ -123,9 +123,8 @@
         android:layout_height="wrap_content"
         android:gravity="center" >
 
-        <Button
+        <TextView
             android:id="@+id/btnBack"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -133,13 +132,12 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/back"
+            android:drawableTop="@drawable/back"
             android:gravity="center"
-            android:textSize="20sp" />
+            android:text="@string/back" />
 
-        <Button
+        <TextView
             android:id="@+id/btnshare"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -147,13 +145,12 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/share"
+            android:drawableTop="@drawable/share"
             android:gravity="center"
-            android:textSize="20sp" />
+            android:text="@string/share" />
 
-        <Button
+        <TextView
             android:id="@+id/btnAgain"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -161,13 +158,12 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/again"
+            android:drawableTop="@drawable/again"
             android:gravity="center"
-            android:textSize="20sp" />
+            android:text="@string/again" />
 
-        <Button
+        <TextView
             android:id="@+id/btnNext"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -175,9 +171,9 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/next"
+            android:drawableTop="@drawable/next"
             android:gravity="center"
-            android:textSize="20sp" />
+            android:text="@string/next" />
     </LinearLayout>
 
 </LinearLayout>
