--- a/Linkup/res/layout/activity_welcome.xml
+++ b/Linkup/res/layout/activity_welcome.xml
@@ -34,6 +34,13 @@
         android:gravity="center"
         android:orientation="horizontal" />
 
+    <TextView
+        android:id="@+id/tsNotice"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textAlignment="center" />
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
