--- a/Linkup/res/layout/fail_dialog.xml
+++ b/Linkup/res/layout/fail_dialog.xml
@@ -67,7 +67,8 @@
             android:layout_margin="20dp"
             android:drawableTop="@drawable/back"
             android:gravity="center"
-            android:text="@string/back" />
+            android:text="@string/back"
+            android:textColor="#ffa500" />
 
         <TextView
             android:id="@+id/fail_button_ok"
@@ -77,7 +78,8 @@
             android:layout_margin="20dp"
             android:drawableTop="@drawable/again"
             android:gravity="center"
-            android:text="@string/again" />
+            android:text="@string/again"
+            android:textColor="#ffa500" />
     </LinearLayout>
 
 </LinearLayout>
