--- a/Linkup/res/layout/help_dialog.xml
+++ b/Linkup/res/layout/help_dialog.xml
@@ -40,18 +40,26 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="bottom|center_horizontal"
-        android:paddingBottom="10dip"
-        android:paddingTop="10dip" >
+        android:layout_marginBottom="20dp"
+        android:gravity="bottom|center_horizontal" >
 
-        <Button
+        <!-- <Button -->
+        <!-- android:id="@+id/dialog_button_ok" -->
+        <!-- android:layout_width="wrap_content" -->
+        <!-- android:layout_height="wrap_content" -->
+        <!-- android:layout_centerHorizontal="true" -->
+        <!-- android:drawableLeft="@drawable/ok" -->
+        <!-- android:textSize="24sp" /> -->
+
+        <TextView
             android:id="@+id/dialog_button_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:drawableLeft="@drawable/ok"
-            android:textSize="24sp" />
+            android:layout_gravity="center"
+            android:drawableTop="@drawable/next"
+            android:gravity="center"
+            android:text="@string/submit"
+            android:textColor="#ffa500" />
     </RelativeLayout>
 
 </LinearLayout>
