--- a/Linkup/res/layout/task_dialog.xml
+++ b/Linkup/res/layout/task_dialog.xml
@@ -132,7 +132,8 @@
             android:layout_margin="20dp"
             android:drawableTop="@drawable/back"
             android:gravity="center"
-            android:text="@string/back" />
+            android:text="@string/back"
+            android:textColor="#ffa500" />
 
         <TextView
             android:id="@+id/btnshare"
@@ -142,7 +143,8 @@
             android:layout_margin="20dp"
             android:drawableTop="@drawable/share"
             android:gravity="center"
-            android:text="@string/share" />
+            android:text="@string/share"
+            android:textColor="#ffa500" />
 
         <TextView
             android:id="@+id/btnAgainOrNext"
@@ -152,7 +154,8 @@
             android:layout_margin="20dp"
             android:drawableTop="@drawable/next"
             android:gravity="center"
-            android:text="@string/next" />
+            android:text="@string/next"
+            android:textColor="#ffa500" />
     </LinearLayout>
 
 </LinearLayout>
